<resources>
    <string name="app_name">Ticky Tacky Toey</string>
    <string name="directions">Tap a square to claim it. X goes first.</string>
    <string name="score">Score: X: %1$d --- O: %2$d</string>
    <string name="x_score">X\'s Score:</string>
    <string name="o_score">O\'s Score:</string>
    <string name="new_game">New Game</string>
    <string name="reset_score">Reset Score</string>
    <string name="whose_turn">It\'s %1$s\'s turn.</string>
    <string name="already_selected">This spot was already selected, try another.</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="wins">%1$s WINS!</string>
    <string name="start_a_new_game">%1$s already won, start a new game!</string>
    <string name="tie_game">Tie game! Try again!</string>
    <string name="dismiss">Dismiss</string>
    <string name="play_again">Play again?</string>
</resources>
