<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daniellegolinsky.tictactoe.MainActivity">

    <LinearLayout
        android:id="@+id/columns"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3"
        android:layout_weight="1">

        <TextView
            android:id="@+id/directions"
            android:text="@string/directions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="4pt"
            />
        <TextView
            android:id="@+id/score"
            android:text="@string/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="4pt"
            />

        <LinearLayout
            android:id="@+id/row_one"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_weight="1">

            <Button
                android:id="@+id/one_one"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="100sp"
                />
            <Button
                android:id="@+id/one_two"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="100sp"
                />
            <Button
                android:id="@+id/one_three"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="100sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_two"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_weight="1">

            <Button
                android:id="@+id/two_one"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="100sp"
                />
            <Button
                android:id="@+id/two_two"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="100sp"
                />
            <Button
                android:id="@+id/two_three"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="100sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_three"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_weight="1">

            <Button
                android:id="@+id/three_one"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="100sp"
                />
            <Button
                android:id="@+id/three_two"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="100sp"
                />
            <Button
                android:id="@+id/three_three"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="100sp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <Button
                android:id="@+id/new_game_button"
                android:text="@string/new_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8pt"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/reset_score_button"
                android:text="@string/reset_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
